--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,12 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
-    "incremental": true,
+    "jsx": "react-jsx",
     "baseUrl": "./",
-   "paths": {
-  "@/*": ["src/*"]
-
+    "paths": {
+      "@/*": ["src/*"]
     }
+
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
