--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.15",
     "@tailwindcss/typography": "^0.5.19",
+    "date-fns": "^4.1.0",
     "framer-motion": "^10.18.0",
     "next": "^14.2.33",
     "next-seo": "^7.0.1",
     "react": "^18.3.1",
+    "react-datepicker": "^8.9.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "sweetalert2": "^11.26.3"
